[package]
name = "acominer"
version = "0.3.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.9.1"
miller_rabin = "1.0.6"
byteorder = "1.4.3"
vulkano = { git = "https://github.com/ishitatsuyuki/vulkano.git", branch = "acominer" }
vulkano-shaders = { git = "https://github.com/ishitatsuyuki/vulkano.git", branch = "acominer" }
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
hex = "0.4.3"
rand = "0.8.3"
clap = "3.0.0-beta.2"
tokio = {version = "1.6.0", features = ["rt", "net", "io-util", "macros", "sync", "time"]}
url = "2.2.2"
indicatif = "0.16.2"
ctrlc = "3.1.9"
anyhow = "1.0.45"
backoff = "0.3.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
once_cell = "1.8.0"
